# classification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pixi.toml  pyproject.toml
classification/: __init__.py  app.py  classifier.py  classifier_face.py  classifier_ocr.py  constants.py  utils.py
tests/: test_app.py  test_classes.py  test_classifier.py
