[project]
authors = [
    {name = "Chris Williams", email = "chrisjw42@gmail.com"},
]
name = "classification"
channels = ["conda-forge"]
description = "Add a short description here"
platforms = ["linux-64", "osx-arm64"]
version = "0.1.0"

[tasks]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# Enable to import the package e.g. for jupyter/cli experimentation
[pypi-dependencies]
"classification" = { path = "classification", editable = true }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
prod = { features = ["prod"], solve-group = "default" }

[tool.pixi.dependencies]
python = ">=3.11"
flask = ">=3.0.3,<4"
face_recognition = ">=1.3.0,<2"
gunicorn = ">=23.0.0,<24"
pytesseract = ">=0.3.13,<0.4"
pypdf = ">=5.1.0,<6"
ruff = ">=0.7.4,<0.8"
pre-commit = ">=4.0.1,<5"

[tool.pixi.feature.dev.dependencies]
ipykernel = ">=6.29.5,<7"
pytest = ">=8.3.3,<9"
pytest-mock = ">=3.14.0,<4"

[tool.pixi.feature.prod.dependencies]
gunicorn = ">=23.0.0,<24"

[tool.pixi.feature.prod.tasks]
serve = "gunicorn -b :8080 --workers 1 --timeout 0 classification.app:app"
